[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kina-archive"
version = "1.1.3"
description = "网页时光机 - 多浏览器截图、像素级/感知哈希对比、网页变更追踪"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kina漫记", email = "shuzhishaoju@gmail.com"}
]
keywords = ["screenshot", "web-archive", "visual-diff", "phash", "web-monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "Pillow>=9.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
kina-archive = "kina_archive.cli:main"

[project.urls]
Homepage = "https://github.com/muyi3919/kina-archive"
Repository = "https://github.com/muyi3919/kina-archive"
Issues = "https://github.com/muyi3919/kina-archive/issues"
Changelog = "https://github.com/muyi3919/kina-archive/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["kina_archive*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
kina_archive = ["*.md"]
